--- a/index.html
+++ b/index.html
@@ -1,13 +1,20 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
     <script type="module" src="/js/main.js" defer></script>
-    <title>Triangular C</title>
+    <link rel="stylesheet" href="./style.css" />
+
+    <title>TAECA</title>
+    <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>📐</text></svg>"/>
   </head>
   <body>
+    <div class="taeca-title">
+      <b>T. A. E. C. A.</b><br>
+      Triangular Array Elementary Cellular Automaton
+    </div>
     <canvas id="webgpu_canvas"></canvas>
   </body>
 </html>
