--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <script type="module" src="/js/main.js" defer></script>
+    <script type="module" src="/js/init.js" defer></script>
     <link rel="stylesheet" href="./style.css" />
 
     <title>TAECA</title>
@@ -14,6 +14,9 @@
     <div class="taeca-title">
       <b>T. A. E. C. A.</b><br>
       Triangular Array Elementary Cellular Automaton
+      <a href="https://github.com/conorpo/triangular-array-cellular-automaton">
+        <img src="./assets/github-mark-white.svg" alt="GitHub">
+      </a>
     </div>
     <canvas id="webgpu_canvas"></canvas>
   </body>
